# blog-api-redis-graphql

./: README.md  pyproject.toml
app/: api.py  main.py
app/core/: config.py
